// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersForm /> renders create user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="platformDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        data-automation="firstNameInput"
        disabled={false}
        inputType="text"
        label="First Name"
        name="firstName"
        required={true}
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        data-automation="lastNameInput"
        disabled={false}
        inputType="text"
        label="Last Name"
        name="lastName"
        required={true}
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        data-automation="externalIdInput"
        disabled={false}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <Detail
        label="Email"
      />
      <Detail
        label="Platform Status"
      />
      <SelectField
        className="frm-users-platform-authentication"
        data-automation="authenticationList"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        data-automation="identityProviderList"
        disabled={false}
        label="Single Sign on Identity Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <ConfirmationWrapper
        confirmBtnCallback={[Function]}
        data-automation="resetPasswordConfirmationWrapper"
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          data-automation="resetPasswordButton"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </ConfirmationWrapper>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        data-automation="workstationIdInput"
        disabled={false}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        data-automation="roleList"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="extensionsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        data-automation="extensionsExtensionList"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="capacityRuleSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity Rule"
      />
      <SelectField
        className="users-form-capacity-rule"
        data-automation="effectiveCapacityRuleList"
        disabled={false}
        label="Current Capacity Rule"
        name="effectiveCapacityRule"
        required={false}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="platformDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        data-automation="firstNameInput"
        disabled={false}
        inputType="text"
        label="First Name"
        name="firstName"
        required={true}
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        data-automation="lastNameInput"
        disabled={false}
        inputType="text"
        label="Last Name"
        name="lastName"
        required={true}
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        data-automation="externalIdInput"
        disabled={false}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <Detail
        label="Email"
      />
      <Detail
        label="Platform Status"
      />
      <SelectField
        className="frm-users-platform-authentication"
        data-automation="authenticationList"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        data-automation="identityProviderList"
        disabled={false}
        label="Single Sign on Identity Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <ConfirmationWrapper
        confirmBtnCallback={[Function]}
        data-automation="resetPasswordConfirmationWrapper"
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          data-automation="resetPasswordButton"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </ConfirmationWrapper>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        data-automation="workstationIdInput"
        disabled={false}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        data-automation="roleList"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="extensionsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        data-automation="extensionsExtensionList"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="capacityRuleSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity Rule"
      />
      <SelectField
        className="users-form-capacity-rule"
        data-automation="effectiveCapacityRuleList"
        disabled={false}
        label="Current Capacity Rule"
        name="effectiveCapacityRule"
        required={false}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user saving and inherited 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="platformDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        data-automation="firstNameInput"
        disabled={true}
        inputType="text"
        label="First Name"
        name="firstName"
        required={true}
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        data-automation="lastNameInput"
        disabled={true}
        inputType="text"
        label="Last Name"
        name="lastName"
        required={true}
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        data-automation="externalIdInput"
        disabled={true}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <Detail
        label="Email"
      />
      <Detail
        label="Platform Status"
      />
      <SelectField
        className="frm-users-platform-authentication"
        data-automation="authenticationList"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        data-automation="identityProviderList"
        disabled={true}
        label="Single Sign on Identity Provider"
        name="defaultIdentityProvider"
        required={true}
      />
      <ConfirmationWrapper
        confirmBtnCallback={[Function]}
        data-automation="resetPasswordConfirmationWrapper"
        mainText="Are you sure you want to send a password reset email to undefined?"
      >
        <Styled(Button)
          buttonType="secondary"
          className="reset-password-button"
          data-automation="resetPasswordButton"
          type="button"
        >
          Reset Password
        </Styled(Button)>
      </ConfirmationWrapper>
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        data-automation="workstationIdInput"
        disabled={true}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        data-automation="roleList"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="extensionsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        data-automation="extensionsExtensionList"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="capacityRuleSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity Rule"
      />
      <SelectField
        className="users-form-capacity-rule"
        data-automation="effectiveCapacityRuleList"
        disabled={true}
        label="Current Capacity Rule"
        name="effectiveCapacityRule"
        required={false}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user with no name set 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="platformDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        data-automation="firstNameInput"
        disabled={false}
        inputType="text"
        label="First Name"
        name="firstName"
        required={true}
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        data-automation="lastNameInput"
        disabled={false}
        inputType="text"
        label="Last Name"
        name="lastName"
        required={true}
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        data-automation="externalIdInput"
        disabled={false}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <Detail
        label="Email"
      />
      <Detail
        label="Platform Status"
      />
      <SelectField
        className="frm-users-platform-authentication"
        data-automation="authenticationList"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        data-automation="identityProviderList"
        disabled={false}
        label="Single Sign on Identity Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        data-automation="workstationIdInput"
        disabled={false}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        data-automation="roleList"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="extensionsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        data-automation="extensionsExtensionList"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user without update permision 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      data-automation="platformDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        data-automation="firstNameInput"
        disabled={true}
        inputType="text"
        label="First Name"
        name="firstName"
        required={true}
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        data-automation="lastNameInput"
        disabled={true}
        inputType="text"
        label="Last Name"
        name="lastName"
        required={true}
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        data-automation="externalIdInput"
        disabled={true}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="loginDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <Detail
        label="Email"
      />
      <Detail
        label="Platform Status"
      />
      <SelectField
        className="frm-users-platform-authentication"
        data-automation="authenticationList"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        data-automation="identityProviderList"
        disabled={true}
        label="Single Sign on Identity Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="tenantDetailsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        data-automation="workstationIdInput"
        disabled={true}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        data-automation="roleList"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="extensionsSVG"
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={false}
      />
      <ExtensionListField
        className="users-extensions"
        data-automation="extensionsExtensionList"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      data-automation="capacityRuleSVG"
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity Rule"
      />
      <SelectField
        className="users-form-capacity-rule"
        data-automation="effectiveCapacityRuleList"
        disabled={true}
        label="Current Capacity Rule"
        name="effectiveCapacityRule"
        required={false}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;
